# octave-sqlite

./: .gitignore  Makefile.in  README.md  bootstrap  checkit.m  cl_sqlite3_handler.cc  cl_sqlite3_handler.h  cl_sqlite_handler.cc  cl_sqlite_handler.h  configure.ac  doit.m  sqlite.cc  sqlite3.cc
test/: Makefile  create_database.sql  fill_database.sql
